# AI-Assistant

./: .gitignore  .gitmodules  AGENTS.md  README.md  SECURITY_AUDIT_REPORT.md  SECURITY_FINDINGS_SUMMARY.txt  docker-compose.yml  menu.bat  menu.sh  requirements-core.txt  requirements-image.txt  requirements.txt  search_err.py  skills.md
.github/: SECURITY.md  copilot-instructions.md  dependabot.yml
app/config/: .env.example  __init__.py  firebase_config.py  logging_config.py  model_config.py  monitor.py  public_urls.py  pyproject.toml  rate_limiter.py  response_cache.py  style2paints_config.json
character_select_stand_alone_app-main/: .gitignore  CHANGELOGS.md  LICENSE  README.md  README_SAAC.md  index.html  index_electron.html  main-common.js  main.js  package-lock.json  package.json
configs/: anime_pipeline.yaml  anime_pipeline_example.yaml  benchmark_suite.yaml  lora_registry.yaml  models.yaml  pipeline.yaml  routing.yaml
docs/: ENHANCED_SETUP_GUIDE.md  SD_MODEL_SOLUTION.md  deployment_last30days_hermes.md  final_summary_hermes_last30days.md  integration_plan_hermes_last30days.md  release_checklist_last30days_hermes.md  ui_audit_and_refactor_plan.md  (+1 more)
private/archived-services/lora-training/: .env.example  .gitignore  Dockerfile  QUICK_START.md  README.md  pyproject.toml  requirements.txt  setup.py  test_installation.py  webui.py
private/archived-services/lora-training/configs/: advanced_config.yaml  default_config.yaml  large_dataset_config.yaml  loraplus_config.yaml  robust_config.yaml  sdxl_config.yaml  small_dataset_config.yaml  ultimate_config_v23.yaml  webui_temp.yaml
private/archived-services/lora-training/data/examples/: README.txt
private/archived-services/lora-training/data/train/: README.txt
private/archived-services/lora-training/data/val/: README.txt
private/archived-services/lora-training/docs/: ADVANCED_FEATURES.md  FEATURES.md  GEMINI_INTEGRATION.md  GEMINI_NSFW_SAFE_CONFIG.md  GETTING_STARTED.md  GUIDE.md  NSFW_TRAINING_GUIDE.md  PROJECT_STRUCTURE.md  README.md  REDIS_INTEGRATION.md  RESEARCH_FINDINGS.md  WD14_QUICKSTART.md  WEBUI_GUIDE.md  train_lora_sum.md
private/archived-services/lora-training/docs/archive/: ADVANCED_GUIDE.md  FEATURES_v2.2.md  FEATURES_v2.3.md  STATUS.md  SUMMARY.txt  WEBUI_SETUP_COMPLETE.md
private/archived-services/lora-training/docs/changelog/: CHANGELOG_v2.3.1.md  CHANGELOG_v2.3.md
private/archived-services/lora-training/lora/: pyvenv.cfg
private/archived-services/lora-training/lora/Scripts/: activate  activate.bat  pygrun
private/archived-services/lora-training/prompts/: character_prompts.txt  style_prompts.txt
private/archived-services/lora-training/scripts/: README.md
private/archived-services/lora-training/scripts/setup/: README.md  batch_generate.bat  preprocess.bat  quickstart.bat  setup.bat  train.bat  utilities.bat
private/archived-services/lora-training/scripts/training/: README.md  resume_training.py  train_lora.py
private/archived-services/lora-training/scripts/utilities/: README.md  analyze_lora.py  benchmark.py  convert_lora.py  gemini_prepare.py  generate_samples.py  merge_lora.py  wd14_tagger.py
private/archived-services/lora-training/utils/: __init__.py  advanced_training.py  config_recommender.py  dataset_loader.py  dataset_tools.py  gemini_assistant.py  logger.py  lora_layers.py  model_utils.py  preprocessing.py  redis_manager.py  training_utils.py
private/archived-services/lora-training/webui/static/css/: style.css
private/archived-services/lora-training/webui/static/js/: main.js
private/archived-services/lora-training/webui/templates/: index.html
rag/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  tasks.ps1
rag/alembic/: env.py
rag/alembic/versions/: 001_initial_domain_model.py
rag/apps/api/: Dockerfile  __init__.py  dependencies.py  main.py  schemas.py
rag/apps/api/routes/: health.py  ingest.py  query.py
rag/apps/worker/: Dockerfile  __init__.py  main.py
rag/eval/: run_eval.py
rag/eval/datasets/: sample.json
rag/infra/: init.sql
rag/libs/agent/: __init__.py  controller.py  memory.py  orchestrator.py  planner.py  safety.py  tools.py  types.py
rag/libs/auth/: authorization.py  context.py  middleware.py
rag/libs/core/: __init__.py  cache.py  database.py  logging.py  models.py  repositories.py  repositories_sql.py  schemas.py  settings.py  storage.py
rag/libs/core/providers/: __init__.py  base.py  factory.py  openai_provider.py
rag/libs/embedding/: indexer.py  service.py  worker_tasks.py
rag/libs/graph_rag/: __init__.py  community.py  extraction.py  global_search.py  indexer.py  local_search.py  router.py  store.py  types.py
rag/libs/guardrails/: __init__.py  events.py  injection.py  output.py  pii.py  pipeline.py  sanitizer.py  trust.py
rag/libs/ingestion/: __init__.py  chunker.py  extractor.py  metadata_extractor.py  normalizer.py  pipeline.py  worker_tasks.py
rag/libs/ingestion/chunkers/: __init__.py  base.py  config.py  document_aware_chunker.py  eval_chunks.py  fixed_chunker.py  parent_child_chunker.py  registry.py  semantic_chunker.py
rag/libs/ingestion/parsers/: __init__.py  base.py  html_parser.py  markdown_parser.py  pdf_parser.py  registry.py  text_parser.py
rag/libs/ragops/: __init__.py  eval_harness.py  judge.py  report.py  tracing.py
rag/libs/ragops/metrics/: __init__.py  answer_relevance.py  context_relevance.py  groundedness.py
rag/libs/retrieval/: __init__.py  fusion.py  generator.py  hybrid.py  lexical_search.py  rerankers.py  search.py  service.py
rag/libs/retrieval/answer/: prompts.py  service.py
rag/libs/retrieval/transforms/: __init__.py  pipeline.py  prompts.py
rag/scripts/: embed_cli.py  eval_retrieval.py  seed_data.py
rag/tests/: test_agent.py  test_answer_generation.py  test_auth.py  test_chunker.py  test_chunkers.py  test_domain_schemas.py  test_embedding.py  test_extractor.py  test_graph_rag.py  test_guardrails.py  test_hybrid_retrieval.py  test_parsers.py  test_query_transforms.py  test_ragops.py  test_retrieval.py  test_schemas.py
(+1260 files in other folders)
