# ============================================================================
# Python Testing & Code Quality Configuration
# ============================================================================

[tool.pytest.ini_options]
# Test discovery
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Output options
addopts = [
    "-v",                      # Verbose
    "--strict-markers",        # Strict marker checking
    "--tb=short",             # Shorter traceback format
    "--maxfail=3",            # Stop after 3 failures
]

# Markers
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "smoke: marks tests as smoke tests",
]

# Coverage
[tool.coverage.run]
source = ["services", "config", "src"]
omit = [
    "*/tests/*",
    "*/venv*/*",
    "*/.venv/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | venv
  | venv_.*
  | build
  | dist
  | __pycache__
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

# Bandit security configuration
[tool.bandit]
exclude_dirs = ["tests", "venv", "venv_*"]
skips = ["B101"]  # Skip assert_used

# ============================================================================
# Project Metadata
# ============================================================================

[project]
name = "ai-assistant"
version = "2.0.0"
description = "Multi-service AI Assistant Platform"
authors = [{name = "SkastVnT"}]
license = {text = "MIT"}
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"
